--- a/Baque/judge/templates/judge/base.html
+++ b/Baque/judge/templates/judge/base.html
@@ -1,3 +1,62 @@
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>{% block title %}Baque{% endblock %}</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+      body {
+        padding-bottom: 20px;
+      }
+      .navbar {
+        margin-bottom: 20px;
+      }
+      .navbar a {
+        margin-right: 10px;
+      }
+      .container {
+        max-width: 1200px;
+      }
+    </style>
+  </head>
 
-{% endblock %}
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="{% url 'index' %}">BAQUE</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'problem_list' %}">List</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'create' %}">Create</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
+
+    <footer class="text-center">
+      <hr>
+      <p>© 2023 Baque</p>
+    </footer>
+  </body>
+</html>
+
