Loads of things

--- a/Baque/judge/templates/judge/base.html
+++ b/Baque/judge/templates/judge/base.html
@@ -37,7 +37,7 @@
               <a class="nav-link" href="{% url 'submission_list' %}">Submissions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'create' %}">Create</a>
+              <a class="nav-link" href="{% url 'edit' %}">Create</a>
             </li>
           </ul>
         </div>
