--- a/Baque/judge/templates/judge/submission_list.html
+++ b/Baque/judge/templates/judge/submission_list.html
@@ -9,6 +9,7 @@
           <th>ID</th>
           <th>Problem Name</th>
           <th>Results</th>
+          <th>Verdict</th>
           <th>View</th>
         </tr>
       </thead>
