--- a/Baque/judge/templates/judge/edit.html
+++ b/Baque/judge/templates/judge/edit.html
@@ -2,10 +2,10 @@
 
 {% block content %}
   <div class="container mt-3">
-    <h2>Create Problem</h2>
+    <h2>Edit Problem</h2>
     <form method="post">
       {% csrf_token %}
-      
+
       <div class="mb-3">
         <label for="{{ form.name.id_for_label }}" class="form-label">Name:</label>
         {{ form.name }}
@@ -37,6 +37,11 @@
       </div>
 
       <div class="mb-3">
+        <label for="{{ form.model_solution.id_for_label }}" class="form-label">Model Solution:</label>
+        <textarea name="{{ form.model_solution.name }}" id="{{ form.model_solution.id_for_label }}" class="form-control" rows="5">{{ form.model_solution.value }}</textarea>
+      </div>
+
+      <div class="mb-3">
         <h4>Test Cases</h4>
         {{ formset.management_form }}
         {% for form in formset.forms %}
@@ -48,7 +53,7 @@
         {% endfor %}
       </div>
 
-      <button type="submit" class="btn btn-primary mt-3">Create Problem</button>
+      <button type="submit" class="btn btn-primary mt-3">Save Problem</button>
     </form>
   </div>
 
