--- a/Baque/judge/templates/judge/problem_list.html
+++ b/Baque/judge/templates/judge/problem_list.html
@@ -18,6 +18,7 @@
             <td>{{ problem.name }}</td>
             <td>
               <a href="{% url 'problem' problem.id %}" class="btn btn-primary">View</a>
+              <a href="{% url 'edit' problem.id %}" class="btn btn-info">Edit</a>
             </td>
           </tr>
         {% endfor %}
