--- a/Baque/judge/templates/judge/base.html
+++ b/Baque/judge/templates/judge/base.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>{% block title %}Baque{% endblock %}</title>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
