--- a/Baque/judge/templates/judge/index.html
+++ b/Baque/judge/templates/judge/index.html
@@ -146,7 +146,7 @@ hr{
 </style>
 <div class="containerHeader">
     <div class="mainImage">
-        <img src="{% static 'link.jpg' %}"  alt="logo">
+        <img src="{% static 'logo.png' %}"  alt="logo">
     </div>
     <div class="mainText">
         <div class="paginaInicial">
@@ -156,15 +156,15 @@ hr{
         </div>
         <div class="mainLinks">
                 <a href="google.com" class="link">
-                    <img src="../../icons/githubLink.png" alt="">
+                    <img src="{% static 'githubLink.png' %}" alt="">
                     <span>Programação Competitiva</span>
                 </a>
                 <a href="google.com" class="link">
-                    <img src="../../icons/githubLink.png" alt="">
+                    <img src="{% static 'githubLink.png' %}" alt="">
                     <span>UnBaloon</span>
                 </a>
                 <a href="google.com" class="link">
-                    <img src="../../icons/baloonsLink.png" alt="">
+                    <img src="{% static 'baloonsLink.png' %}" alt="">
                     <span>UnBaloon</span>
                 </a>
         </div>
@@ -174,7 +174,7 @@ hr{
     <div class="flex-child">
         <div class="listTitle">
             <p>Materiais de Estudo</p>
-            <img src="../../icons/book.png" alt="book">
+            <img src="{% static 'book.png' %}" alt="book">
         </div>
         <div class="listItems">
             <a href="https://unballoon.github.io/materiais/fundamentos/" target="_blank">Fundamentos da Linguagem C++</a>
@@ -199,37 +199,37 @@ hr{
     <div class="flex-child">
         <div class="listTitle">
             <p class="bookimage">Links Importantes</p>
-            <img src="../../icons/link.png" alt="link">
+            <img src="{% static 'link.png' %}" alt="link">
         </div>
         <div class="listGrid">
             <div>
                 <a href="https://icpc.global" target="_blank">
-                    <img src="../../icons/icpc.png" alt="icpc" >
+                    <img src="{% static 'icpc.png' %}" alt="icpc" >
                 </a>
             </div>
             <div>
                 <a href="https://olimpiada.ic.unicamp.br/" target="_blank">
-                    <img src="../../icons/obi.png" alt="obi" >
+                    <img src="{% static 'obi.png' %}" alt="obi" >
                 </a>
             </div>
             <div>
                 <a href="https://neps.academy/br" target="_blank">
-                    <img src="../../icons/neps.png" alt="neps" >
+                    <img src="{% static 'neps.png' %}" alt="neps" >
                 </a>
             </div>
             <div>
                 <a href="https://github.com/" target="_blank">
-                    <img src="../../icons/github.png" alt="github" >
+                    <img src="{% static 'github.png' %}" alt="github" >
                 </a>
             </div>
             <div>
                 <a href="https://www.youtube.com/@tmwilliamlin168" target="_blank">
-                    <img src="../../icons/einsten.png" alt="einsten">
+                    <img src="{% static 'einsten.png' %}" alt="einsten">
                 </a>
             </div>
             <div>
                 <a href="https://cplusplus.com/" target="_blank">
-                    <img src="../../icons/c.png" alt="c">
+                    <img src="{% static 'c.png' %}" alt="c">
                 </a>
             </div>
         </div>
