--- a/Baque/judge/templates/judge/problem_list.html
+++ b/Baque/judge/templates/judge/problem_list.html
@@ -19,6 +19,7 @@
             <td>
               <a href="{% url 'problem' problem.id %}" class="btn btn-primary">View</a>
               <a href="{% url 'edit' problem.id %}" class="btn btn-info">Edit</a>
+              <a href="{% url 'add_generator' problem.id %}" class="btn btn-warning">Add Generator</a>
             </td>
           </tr>
         {% endfor %}
