correcao nos lnks

--- a/Baque/judge/templates/judge/index.html
+++ b/Baque/judge/templates/judge/index.html
@@ -196,15 +196,15 @@ hr{
             <p class="paginaInicial-description">Encontre aqui as principais informações e materiais de Programação Competitiva!!</p>
         </div>
         <div class="mainLinks">
-                <a href="google.com" class="link">
+                <a href="https://github.com/UnBalloon" class="link">
                     <img src="{% static 'githubLink.png' %}" alt="">
                     <span>Programação Competitiva</span>
                 </a>
-                <a href="google.com" class="link">
+                <a href="https://github.com/UnBalloon" class="link">
                     <img src="{% static 'githubLink.png' %}" alt="">
                     <span>UnBaloon</span>
                 </a>
-                <a href="google.com" class="link">
+                <a href="https://github.com/UnBalloon" class="link">
                     <img src="{% static 'baloonsLink.png' %}" alt="">
                     <span>UnBaloon</span>
                 </a>
@@ -264,7 +264,7 @@ hr{
                 </a>
             </div>
             <div>
-                <a href="https://www.youtube.com/@tmwilliamlin168" target="_blank">
+                <a href="https://cp-algorithms.com/index.html" target="_blank">
                     <img src="{% static 'einsten.png' %}" alt="einsten">
                 </a>
             </div>
